add corsConfiguration